--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
 					<div class="features__right-content">
 						<div class="upper-row">
 							<div class="feature-item">
-								<img src="../img/Features/01.svg" alt="Management">
+								<img src="./img/Features/01.svg" alt="Management">
 								<h3 class="feature-item-header">Management</h3>
 								<p class="feature-item-text">
 									Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor
 								</p>
 							</div>
 							<div class="feature-item">
-								<img src="../img/Features/02.svg" alt="UI /UX Design">
+								<img src="./img/Features/02.svg" alt="UI /UX Design">
 								<h3 class="feature-item-header">UI /UX Design</h3>
 								<p class="feature-item-text">
 									Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor
@@ -78,14 +78,14 @@
 						</div>
 						<div class="lower-row">
 							<div class="feature-item">
-								<img src="../img/Features/03.svg" alt="Logo / Branding">
+								<img src="./img/Features/03.svg" alt="Logo / Branding">
 								<h3 class="feature-item-header">Logo / Branding</h3>
 								<p class="feature-item-text">
 									Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor
 								</p>
 							</div>
 							<div class="feature-item">
-								<img src="../img/Features/04.svg" alt="Animation">
+								<img src="./img/Features/04.svg" alt="Animation">
 								<h3 class="feature-item-header">Animation</h3>
 								<p class="feature-item-text">
 									Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor
