--- a/index.html
+++ b/index.html
@@ -121,16 +121,16 @@
 				
 				<div class="feature-products__img">
 					<div class="upper-img">
-						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
 					</div>
 					<div class="lower-img">
-						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
 					</div>
 					
 				</div>
