--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
 
 	<!-- СSS -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-
-	<!-- SLIDER -->
-
-	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 	
 
 	<!-- Шрифты -->
@@ -17,12 +13,16 @@
 		@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap');
 	</style>
 
-	<title>Document</title>
+	<title>Agency</title>
 </head>
 <body>
 	<!-- NAV and HEADER -->
 	<header>
 		<div class="container container--header">
+			<div class="burger-bg"></div>
+			<div class="header__burger">
+				<span></span>
+			</div>
 			<div class="header__nav">
 				<nav>
 					<a href="#">home</a>
@@ -63,14 +63,14 @@
 					<div class="features__right-content">
 						<div class="upper-row">
 							<div class="feature-item">
-								<img src="img/Features/01.svg" alt="Management">
+								<img src="../img/Features/01.svg" alt="Management">
 								<h3 class="feature-item-header">Management</h3>
 								<p class="feature-item-text">
 									Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor
 								</p>
 							</div>
 							<div class="feature-item">
-								<img src="img/Features/02.svg" alt="UI /UX Design">
+								<img src="../img/Features/02.svg" alt="UI /UX Design">
 								<h3 class="feature-item-header">UI /UX Design</h3>
 								<p class="feature-item-text">
 									Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor
@@ -79,14 +79,14 @@
 						</div>
 						<div class="lower-row">
 							<div class="feature-item">
-								<img src="img/Features/03.svg" alt="Logo / Branding">
+								<img src="../img/Features/03.svg" alt="Logo / Branding">
 								<h3 class="feature-item-header">Logo / Branding</h3>
 								<p class="feature-item-text">
 									Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor
 								</p>
 							</div>
 							<div class="feature-item">
-								<img src="img/Features/04.svg" alt="Animation">
+								<img src="../img/Features/04.svg" alt="Animation">
 								<h3 class="feature-item-header">Animation</h3>
 								<p class="feature-item-text">
 									Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor
@@ -122,16 +122,16 @@
 				
 				<div class="feature-products__img">
 					<div class="upper-img">
-						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
 					</div>
 					<div class="lower-img">
-						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
 					</div>
 					
 				</div>
@@ -282,15 +282,17 @@
 					© Copyright @Junaed 2016, All rights reserved.
 				</span>
 				<div class="links">
-					<a href="#" class="links__item"><img src="./img/Footer/01.svg" alt=""></a>
-					<a href="#" class="links__item"><img src="./img/Footer/02.svg" alt=""></a>
-					<a href="#" class="links__item"><img src="./img/Footer/03.svg" alt=""></a>
-					<a href="#" class="links__item"><img src="./img/Footer/04.svg" alt=""></a>	
+					<a href="#" class="links__item"><img src="img/Footer/01.svg" alt=""></a>
+					<a href="#" class="links__item"><img src="img/Footer/02.svg" alt=""></a>
+					<a href="#" class="links__item"><img src="img/Footer/03.svg" alt=""></a>
+					<a href="#" class="links__item"><img src="img/Footer/04.svg" alt=""></a>	
 				</div>	
 			</div>
 		</div>
 	</footer>
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script src="js/script.js"></script>
 
 </body>
 </html>
