--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 					<div class="features__right-content">
 						<div class="upper-row">
 							<div class="feature-item">
-								<img src="img/Features/01.svg" alt="Management">
+								<img src="../img/Features/01.svg" alt="Management">
 								<h3 class="feature-item-header">Management</h3>
 								<p class="feature-item-text">
 									Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor
 								</p>
 							</div>
 							<div class="feature-item">
-								<img src="img/Features/02.svg" alt="UI /UX Design">
+								<img src="../img/Features/02.svg" alt="UI /UX Design">
 								<h3 class="feature-item-header">UI /UX Design</h3>
 								<p class="feature-item-text">
 									Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor
@@ -79,14 +79,14 @@
 						</div>
 						<div class="lower-row">
 							<div class="feature-item">
-								<img src="img/Features/03.svg" alt="Logo / Branding">
+								<img src="../img/Features/03.svg" alt="Logo / Branding">
 								<h3 class="feature-item-header">Logo / Branding</h3>
 								<p class="feature-item-text">
 									Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor
 								</p>
 							</div>
 							<div class="feature-item">
-								<img src="img/Features/04.svg" alt="Animation">
+								<img src="../img/Features/04.svg" alt="Animation">
 								<h3 class="feature-item-header">Animation</h3>
 								<p class="feature-item-text">
 									Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor
@@ -122,16 +122,16 @@
 				
 				<div class="feature-products__img">
 					<div class="upper-img">
-						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
 					</div>
 					<div class="lower-img">
-						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
-						<div><img src="img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
+						<div><img src="../img/Feature-products/01.png" alt="" class="feature-products__image"></div>
 					</div>
 					
 				</div>
@@ -282,10 +282,10 @@
 					© Copyright @Junaed 2016, All rights reserved.
 				</span>
 				<div class="links">
-					<a href="#" class="links__item"><img src="img/Footer/01.svg" alt=""></a>
-					<a href="#" class="links__item"><img src="img/Footer/02.svg" alt=""></a>
-					<a href="#" class="links__item"><img src="img/Footer/03.svg" alt=""></a>
-					<a href="#" class="links__item"><img src="img/Footer/04.svg" alt=""></a>	
+					<a href="#" class="links__item"><img src="img/Footer/01.png" alt=""></a>
+					<a href="#" class="links__item"><img src="img/Footer/02.png" alt=""></a>
+					<a href="#" class="links__item"><img src="img/Footer/03.png" alt=""></a>
+					<a href="#" class="links__item"><img src="img/Footer/04.png" alt=""></a>	
 				</div>	
 			</div>
 		</div>
