--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</div>
 			<div class="header__content">
 				<div class="header__left-content">
-					<h1 class="header__title">our strong organaisation</h1>
+					<h1 class="header__title">our strong organization</h1>
 					<p class="header__text">
 						Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt  ut labore et. ectetur 	adig ipis cing elit, sed do eiusmod tempor incididunt.
 					</p>
