--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 							<input type="text" placeholder="Name" class="contacts__input">
 							<input type="text" placeholder="Your Mail" class="contacts__input">
 						</div>
-						<textarea name="" id="" cols="30" rows="10" placeholder="Type your message" class="contacts__input"></textarea>
+						<textarea name="#" id="#" cols="30" rows="10" placeholder="Type your message" class="contacts__input"></textarea>
 						<button class="btn">Send message</button>
 					</div>
 					<div class="contacts__right-content">
